--- a/src/main/resources/static/app/login/login.view.html
+++ b/src/main/resources/static/app/login/login.view.html
@@ -1,10 +1,20 @@
-<form action="{{form.action}}" method="POST">
-    <input type="hidden" name="scope" value="publish_actions,user_photos,public_profile,email" />
-    <div>
-        <p>You aren't connected to Facebook yet. Click the button to
-            connect Spring Social Showcase with your Facebook account.</p>
+<div class="jumbotron">
+    <h1>Hello</h1>
+    <p>You can use one of the following social networks to join in</p>
+
+    <div class="row">
+        <div class="col-xs-6 col-md-3">
+            <a href="/socialauth?id=facebook" class="thumbnail">
+                <img src="images/facebook_icon.png" alt="Facebook" title="Facebook" border="0"/>
+            </a>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+            <a href="/socialauth?id=googleplus" class="thumbnail">
+                <img src="images/googleplus.png" alt="Google Plus" title="Google Plus" border="0"/>
+            </a>
+        </div>
+
     </div>
-    <p>
-        <button type="submit">Connect to FB</button>
-    </p>
-</form>
+
+</div>
