--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -14,8 +14,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li ng-class="{ active: isActive('/home') }"><a href="#/home">Home</a></li>
-                <li ng-class="{ active: isActive('/teams') }"><a href="#/teams">The Teams</a></li>
-                <li ng-class="{ active: isActive('/games') }"><a href="#/games">Games</a></li>
+                <li ng-class="{ active: isActive('/teams') }"><a href="#/teams/groups">Teams</a></li>
+                <li ng-class="{ active: isActive('/games') }"><a href="#/games">Matches</a></li>
                 <li class="dropdown" ng-class="{ active: isActiveStartWith('/bets/') }">
                     <a href="#/bets" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bets <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -24,6 +24,7 @@
                         <li ng-class="{ active: isActive('/bets/statistics') }"><a href="#/bets/statistics">Statistics</a></li>
                     </ul>
                 </li>
+                <li><a href="#/">Rules</a></li>
                 <li><a href="#/">Contact</a></li>
             </ul>
 
