--- a/src/main/resources/static/app/teams/teams.view.html
+++ b/src/main/resources/static/app/teams/teams.view.html
@@ -1,13 +1,13 @@
 <section id="teams">
-    <h1>The Teams</h1>
+    <h1>Teams</h1>
 
-    <p>
-        Bla Bla bla
-    </p>
+    <ul class="nav nav-tabs nav-justified">
+        <li role="presentation" ui-sref-active="active"><a ui-sref="teams.groups">Groups</a></li>
+        <li role="presentation" ui-sref-active="active"><a ui-sref="teams.fifaranking">FIFA Ranking</a></li>
+        <li role="presentation" ui-sref-active="active"><a ui-sref="teams.confederation">Confederation</a></li>
+    </ul>
 
-    <div class="panel panel-default">
+    <div class="panel panel-default" ui-view autoscroll></div>
 
 
-
-    </div>
 </section>
