--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,10 +23,6 @@
     <div data-ui-view="navbar"></div>
     <div class="container">
         <div class="container" ui-view="content"></div>
-        <div class="navbar-default navbar navbar-fixed-bottom">
-            <div class="container">
-            </div>
-        </div>
     </div>
 
     <script src="js/jquery.min.js" type="text/javascript"></script>
@@ -34,6 +30,7 @@
     <script src="js/angular-animate.min.js" type="text/javascript"></script>
     <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
     <script src="js/angular-ui-router.min.js" type="text/javascript"></script>
+    <script src="js/statehelper.min.js" type="text/javascript"></script>
     <script src="js/angular-resource.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
