--- a/src/main/resources/static/app/teams/teams.confederations.html
+++ b/src/main/resources/static/app/teams/teams.confederations.html
@@ -1,31 +1,27 @@
-confederation
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col">#</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-        <th scope="col">Username</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-    </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-    </tr>
-    </tbody>
-</table>
+
+<div class="panel panel-default" ng-repeat="(confederation,teams) in confederation">
+    <!-- Default panel contents -->
+    <div class="panel-heading">{{confederation}}</div>
+
+    <!-- Table -->
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Crest</th>
+            <th scope="col">Name</th>
+            <th scope="col">Ranking</th>
+            <th scope="col">Titles Won</th>
+            <th scope="col">World Cup Appearances</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="team in teams">
+            <td><img ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/></td>
+            <th scope="row">{{team.name | capitalize }}</th>
+            <td>{{team.fifaRanking}}</td>
+            <td>{{team.titles}}</td>
+            <td>{{team.appearances}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
