--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -13,9 +13,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li ng-class="{ active: isActive('/home') }"><a href="#/home">Home</a></li>
-                <li ng-class="{ active: isActive('/teams') }"><a href="#/teams/groups">Teams</a></li>
-                <li ng-class="{ active: isActive('/games') }"><a href="#/games">Matches</a></li>
+                <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
+                <li ui-sref-active="active"><a href="#/teams/groups">Teams</a></li>
+                <li ui-sref-active="active"><a ui-sref="games">Matches</a></li>
                 <li class="dropdown" ng-class="{ active: isActiveStartWith('/bets/') }">
                     <a href="#/bets" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bets <span class="caret"></span></a>
                     <ul class="dropdown-menu">
