--- a/src/main/resources/static/app/teams/teams.groups.html
+++ b/src/main/resources/static/app/teams/teams.groups.html
@@ -1,19 +1,36 @@
-groups
-<table class="table">
-    <!--<thead>-->
-    <!--<tr>-->
-        <!--<th scope="col">#</th>-->
-        <!--<th scope="col">First Name</th>-->
-        <!--<th scope="col">Last Name</th>-->
-        <!--<th scope="col">Username</th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <tbody>
-    <tr ng-repeat="team in teams">
-        <th scope="row">{{team.name | capitalize }}</th>
-        <td>{{team.fifaRanking}}</td>
-        <td><img ng-src="/images/teams/{{team.confederation}}/{{team.code}}.png"/></td>
-        <td>{{team.groupId}}</td>
-    </tr>
-    </tbody>
-</table>
+
+
+<div class="panel panel-default" ng-repeat="(group,teams) in groups">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Group {{group}}</div>
+
+    <!-- Table -->
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Team</th>
+            <th scope="col">Played</th>
+            <th scope="col">Won</th>
+            <th scope="col">Draw</th>
+            <th scope="col">Lost</th>
+            <th scope="col">Goals for</th>
+            <th scope="col">Goals Against</th>
+            <th scope="col">+/-</th>
+            <th scope="col">Points</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="team in teams">
+            <th scope="row"><img ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/> {{team.name | capitalize }}</th>
+            <td>{{team.played}}</td>
+            <td>{{team.won}}</td>
+            <td>{{team.draw}}</td>
+            <td>{{team.lost}}</td>
+            <td>{{team.goalsFor}}</td>
+            <td>{{team.goalsAgainst}}</td>
+            <td>{{team.goalsDiff}}</td>
+            <td>{{team.points}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
