--- a/src/main/resources/static/app/teams/teams.view.html
+++ b/src/main/resources/static/app/teams/teams.view.html
@@ -1,13 +1,14 @@
-<section id="teams">
-    <h1>Teams</h1>
+<section id="teams" >
+    <div data-spy="affix" data-offset-top="195">
+        <h1>Teams <small>{{view.section}}</small></h1>
 
-    <ul class="nav nav-tabs nav-justified">
-        <li role="presentation" ui-sref-active="active"><a ui-sref="teams.groups">Groups</a></li>
-        <li role="presentation" ui-sref-active="active"><a ui-sref="teams.fifaranking">FIFA Ranking</a></li>
-        <li role="presentation" ui-sref-active="active"><a ui-sref="teams.confederation">Confederation</a></li>
-    </ul>
+        <ul class="nav nav-tabs nav-justified">
+            <li role="presentation" ui-sref-active="active"><a ui-sref="teams.groups">Groups</a></li>
+            <li role="presentation" ui-sref-active="active"><a ui-sref="teams.fifaranking">FIFA Ranking</a></li>
+            <li role="presentation" ui-sref-active="active"><a ui-sref="teams.confederation">Confederation</a></li>
+        </ul>
+    </div>
 
-    <div class="panel panel-default" ui-view autoscroll></div>
-
+    <div class="panel container-fluid" ui-view></div>
 
 </section>
