start working on matches page

--- a/src/main/resources/static/app/teams/teams.view.html
+++ b/src/main/resources/static/app/teams/teams.view.html
@@ -1,5 +1,5 @@
-<section id="teams" >
-    <div data-spy="affix" data-offset-top="195">
+<section id="teams">
+    <div >
         <h1>Teams <small>{{view.section}}</small></h1>
 
         <ul class="nav nav-tabs nav-justified">
@@ -9,6 +9,6 @@
         </ul>
     </div>
 
-    <div class="panel container-fluid" ui-view></div>
+    <div class="panel" ui-view></div>
 
 </section>
