--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom styles for this template -->
     <link href="css/app.css" rel="stylesheet">
+    <link href="css/matchlist-header.css" rel="stylesheet">
     <style type="text/css">
         [ng\:cloak], [ng-cloak], .ng-cloak {
             display: none !important;
