--- a/src/main/resources/static/app/games/games.view.html
+++ b/src/main/resources/static/app/games/games.view.html
@@ -1,13 +1,17 @@
 <section id="games">
-    <h1>Games</h1>
+    <div>
+        <h1>Matches <small>{{view.section}}</small></h1>
 
-    <p>
-        Bla Bla bla
-    </p>
+        <div>
+            <div ng-include src="'app/games/matchlist-header.html'"></div>
+        </div>
 
-    <div class="panel panel-default">
-
-
-
+        <ul class="nav nav-tabs nav-justified">
+            <li role="presentation" ui-sref-active="active"><a ui-sref="games.firststage">First Stage</a></li>
+            <li role="presentation" ui-sref-active="active"><a ui-sref="games.secondstage">Second Stage</a></li>
+        </ul>
     </div>
+
+    <div class="panel" ui-view></div>
+
 </section>
