matches pages progress

--- a/src/main/resources/static/app/games/games.firststage.html
+++ b/src/main/resources/static/app/games/games.firststage.html
@@ -1,1 +1,21 @@
-First Stage
+
+
+<table class="table">
+    <tbody>
+    <tr ng-repeat="match in matches.firstStage">
+        <td>
+            <div>Group {{match.groupId}}</div>
+            <div>{{match.kickoff | date : format : 'medium'}}</div>
+        </td>
+        <td>
+            <img ng-src="/images/teams/{{match.homeTeam.confederation | spaceToUnderscore}}/{{match.homeTeam.code}}.png"/>
+            {{match.homeTeam.name | capitalize }}
+        </td>
+        <td>{{match.kickoff | date : format : 'hh:mm '}}</td>
+        <td>
+            <img ng-src="/images/teams/{{match.awayTeam.confederation | spaceToUnderscore}}/{{match.awayTeam.code}}.png"/>
+            {{match.awayTeam.name | capitalize }}
+        </td>
+    </tr>
+    </tbody>
+</table>
