--- a/src/main/resources/static/app/games/games.view.html
+++ b/src/main/resources/static/app/games/games.view.html
@@ -2,7 +2,7 @@
     <div>
         <h1>Matches <small>{{view.section}}</small></h1>
 
-        <div>
+        <div style="display: none">
             <div ng-include src="'app/games/matchlist-header.html'"></div>
         </div>
 
