--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -14,14 +14,16 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
-                <li ui-sref-active="active"><a href="#/teams/groups">Teams</a></li>
+                <li ui-sref-active="active"><a ui-sref="teams">Teams</a></li>
                 <li ui-sref-active="active"><a ui-sref="games">Matches</a></li>
-                <li class="dropdown" ng-class="{ active: isActiveStartWith('/bets/') }">
-                    <a href="#/bets" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Bets <span class="caret"></span></a>
+                <li class="dropdown" ui-sref-active="active">
+                    <a ui-sref="bets" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        Bets <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
-                        <li ng-class="{ active: isActive('/bets/mine') }"><a href="#/bets/mine">My bets</a></li>
+                        <li><a href="#/bets/mine">My bets</a></li>
                         <li role="separator" class="divider"></li>
-                        <li ng-class="{ active: isActive('/bets/statistics') }"><a href="#/bets/statistics">Statistics</a></li>
+                        <li><a href="#/bets/statistics">Statistics</a></li>
                     </ul>
                 </li>
                 <li><a href="#/">Rules</a></li>
@@ -34,7 +36,9 @@
 
             <ul class="nav navbar-nav navbar-right" data-ng-show="user.authenticate">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img ng-src="{{user.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <img ng-src="{{user.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Signed in as {{user.displayName}}</li>
                         <li><a href="#">Profile</a></li>
@@ -44,7 +48,6 @@
                     </ul>
                 </li>
             </ul>
-
         </div><!--/.nav-collapse -->
     </div>
 </nav>
