--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,6 @@
     <script src="app/bets/bets.controller.js"></script>
     <script src="app/login/login.controller.js"></script>
 
-    <script src="app/components/user.service.js"></script>
-
+    <script src="app/games/games.js"></script>
 </body>
 </html>
