--- a/src/main/resources/static/app/teams/teams.confederations.html
+++ b/src/main/resources/static/app/teams/teams.confederations.html
@@ -1,29 +1,40 @@
 
 <div class="panel panel-default" ng-repeat="(confederation,teams) in confederation">
-    <!-- Default panel contents -->
-    <div class="panel-heading">
-        <h1><img ng-src="/images/confederations/{{confederation | spaceToUnderscore}}.jpg"/>{{confederation | underscoreToSpace | capitalize}}</h1>
+
+
+    <div class="media">
+        <div class="media-left">
+            <a href="#">
+                <img class="media-object" ng-src="/images/confederations/{{confederation | spaceToUnderscore}}.jpg"/>
+            </a>
+        </div>
+        <div class="media-body">
+            <h2 class="media-heading">{{confederation | underscoreToSpace | capitalize}}</h2>
+            <!-- Table -->
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Team</th>
+                    <th scope="col">Ranking</th>
+                    <th scope="col">Titles Won</th>
+                    <th scope="col">World Cup Appearances</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="team in teams">
+                    <th>
+                        <h3>
+                            <img class="flag" ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/>
+                            {{team.name | capitalize }}
+                        </h3>
+                    </th>
+                    <td>{{team.fifaRanking}}</td>
+                    <td>{{team.titles}}</td>
+                    <td>{{team.appearances}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
-    <!-- Table -->
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Crest</th>
-            <th scope="col">Name</th>
-            <th scope="col">Ranking</th>
-            <th scope="col">Titles Won</th>
-            <th scope="col">World Cup Appearances</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="team in teams">
-            <td><img ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/></td>
-            <th scope="row">{{team.name | capitalize }}</th>
-            <td>{{team.fifaRanking}}</td>
-            <td>{{team.titles}}</td>
-            <td>{{team.appearances}}</td>
-        </tr>
-        </tbody>
-    </table>
 </div>
