--- a/src/main/resources/static/app/teams/teams.fifaranking.html
+++ b/src/main/resources/static/app/teams/teams.fifaranking.html
@@ -2,8 +2,7 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Crest</th>
-        <th scope="col">Name</th>
+        <th scope="col">Team</th>
         <th scope="col">Ranking</th>
         <th scope="col">Titles Won</th>
         <th scope="col">World Cup Appearances</th>
@@ -11,8 +10,12 @@
     </thead>
     <tbody>
     <tr ng-repeat="team in teams | orderBy:'fifaRanking'">
-        <td><img ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/></td>
-        <th scope="row">{{team.name | capitalize }}</th>
+        <th>
+            <h3>
+                <img class="flag" ng-src="/images/teams/{{team.confederation | spaceToUnderscore}}/{{team.code}}.png"/>
+                {{team.name | capitalize }}
+            </h3>
+        </th>
         <td>{{team.fifaRanking}}</td>
         <td>{{team.titles}}</td>
         <td>{{team.appearances}}</td>
