--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -17,7 +17,7 @@
                 <li ui-sref-active="active"><a ui-sref="teams">Teams</a></li>
                 <li ui-sref-active="active"><a ui-sref="games">Matches</a></li>
                 <li class="dropdown" ui-sref-active="active">
-                    <a ui-sref="bets" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Bets <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
@@ -36,7 +36,7 @@
 
             <ul class="nav navbar-nav navbar-right" data-ng-show="user.authenticate">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <img ng-src="{{user.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
@@ -44,7 +44,7 @@
                         <li><a href="#">Profile</a></li>
                         <li><a href="#">Settings</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#" data-ng-click="logout()">Log out</a></li>
+                        <li><a href data-ng-click="logout()">Log out</a></li>
                     </ul>
                 </li>
             </ul>
