--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -30,14 +30,14 @@
                 <li><a href="#/">Contact</a></li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right" data-ng-hide="user.authenticate">
+            <ul class="nav navbar-nav navbar-right" data-ng-hide="globals.currentUser.authenticate">
                 <li><a href="#/join">Join</a></li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right" data-ng-show="user.authenticate">
+            <ul class="nav navbar-nav navbar-right" data-ng-show="globals.currentUser.authenticate">
                 <li class="dropdown">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <img ng-src="{{user.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span>
+                        <img ng-src="{{globals.currentUser.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header">Signed in as {{user.displayName}}</li>
