--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,6 +37,7 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
 
+    
     <!-- create the app module first -->
     <script src="app.js"></script>
     <!-- controllers -->
@@ -45,8 +46,11 @@
     <script src="app/teams/teams.controller.js"></script>
     <script src="app/games/games.controller.js"></script>
     <script src="app/bets/bets.controller.js"></script>
+    <script src="app/admin/admin.controller.js"></script>
     <!-- services -->
+    <script src="app/components/auth.services.js"></script>
     <script src="app/teams/team.service.js"></script>
     <script src="app/games/games.service.js"></script>
+
 </body>
 </html>
