--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,9 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom styles for this template -->
+    <link href="css/loading-bar.css" rel="stylesheet" media='all' >
     <link href="css/app.css" rel="stylesheet">
-    <link href="css/matchlist-header.css" rel="stylesheet">
+    <!-- <link href="css/matchlist-header.css" rel="stylesheet"> -->
     <style type="text/css">
         [ng\:cloak], [ng-cloak], .ng-cloak {
             display: none !important;
@@ -22,6 +23,7 @@
 
 <body data-ng-app="worldcup" class="ng-cloak">
     <div data-ui-view="navbar"></div>
+    <!--<div id="loading-bar-container"></div>-->
     <div class="container main">
         <div class="container" ui-view="content"></div>
     </div>
@@ -36,8 +38,8 @@
     <script src="js/angular-resource.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
+    <script src="js/loading-bar.js" type="text/javascript"></script>
 
-    
     <!-- create the app module first -->
     <script src="app.js"></script>
     <!-- controllers -->
@@ -51,6 +53,9 @@
     <script src="app/components/auth.services.js"></script>
     <script src="app/teams/team.service.js"></script>
     <script src="app/games/games.service.js"></script>
+    <!-- Directives -->
+    <script src="app/directives/permission.directive.js"></script>
+    <script src="app/directives/matches.directive.js"></script>
 
 </body>
 </html>
