--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom styles for this template -->
-    <link href="css/loading-bar.css" rel="stylesheet" media='all' >
+    <link href="css/loading-bar.min.css" rel="stylesheet" media='all' >
     <link href="css/app.css" rel="stylesheet">
     <!-- <link href="css/matchlist-header.css" rel="stylesheet"> -->
     <style type="text/css">
@@ -38,7 +38,7 @@
     <script src="js/angular-resource.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/ui-bootstrap-tpls.min.js" type="text/javascript"></script>
-    <script src="js/loading-bar.js" type="text/javascript"></script>
+    <script src="js/loading-bar.min.js" type="text/javascript"></script>
 
     <!-- create the app module first -->
     <script src="app.js"></script>
@@ -53,6 +53,7 @@
     <script src="app/components/auth.services.js"></script>
     <script src="app/teams/team.service.js"></script>
     <script src="app/games/games.service.js"></script>
+    <script src="app/bets/bets.service.js"></script>
     <!-- Directives -->
     <script src="app/directives/permission.directive.js"></script>
     <script src="app/directives/matches.directive.js"></script>
