added team directive second stage view - part 1

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
     <!-- Custom styles for this template -->
     <link href="css/loading-bar.min.css" rel="stylesheet" media='all' >
     <link href="css/app.css" rel="stylesheet">
+    <link href="css/bracket.css" rel="stylesheet">
     <!-- <link href="css/matchlist-header.css" rel="stylesheet"> -->
     <style type="text/css">
         [ng\:cloak], [ng-cloak], .ng-cloak {
@@ -57,6 +58,7 @@
     <!-- Directives -->
     <script src="app/directives/permission.directive.js"></script>
     <script src="app/directives/matches.directive.js"></script>
+    <script src="app/directives/team.directive.js"></script>
 
 </body>
 </html>
