--- a/src/main/resources/static/app/bets/bets.view.html
+++ b/src/main/resources/static/app/bets/bets.view.html
@@ -11,85 +11,59 @@
         <div ng-repeat="bet in bets">
 
             <div class="row table-bordered table-hover" data-toggle="collapse" data-target="#bet-{{bet.id}}-data">
-                <div class="col-md-4"><b>{{bet.id}}</b></div>
-                <div class="col-md-4">{{bet.description}}</div>
-                <div class="col-md-4">{{bet.lockTime | date : 'MMM d, h:mm:ss a'}}</div>
+                <div class="col-md-2">{{bet.match.stage}}</div>
+                <div class="col-md-2">{{bet.match.kickoff | date : 'MMM d, yyyy - h:mm a' }}</div>
+                <div class="col-md-2"><team data="bet.match.homeTeam"/></div>
+                <div class="col-md-2">vs</div>
+                <div class="col-md-2"><team data="bet.match.awayTeam"/></div>
             </div>
 
             <div id="bet-{{bet.id}}-data" class="collapse">
-                <div class="row table-bordered">
-                    <div class="col-md-2">{{bet.match.stage}}</div>
-                    <div class="col-md-2">{{bet.match.kickoff | date : 'MMM d, h:mm:ss a' }}</div>
-                    <div class="col-md-2">
-                        <img data-ng-src="/images/teams/{{bet.match.homeTeam.confederation | spaceToUnderscore}}/{{bet.match.homeTeam.code}}.png"/>
-                        {{bet.match.homeTeam.name | capitalize }}
-                    </div>
-                    <div class="col-md-2">vs</div>
-                    <div class="col-md-2">
-                        <img data-ng-src="/images/teams/{{bet.match.awayTeam.confederation | spaceToUnderscore}}/{{bet.match.awayTeam.code}}.png"/>
-                        {{bet.match.homeTeam.name | capitalize }}
-                    </div>
-                </div>
-                <div class="row table-bordered">
-                    <div class="col-md-6">
-                        <b>Result</b>
-                        <div class="form-group">
-                            <label for="resultHomeTeamGoals">Home team Goals</label>
-                            <input type="number" class="form-control" id="resultHomeTeamGoals" ng-model="bet.match.result.homeTeamGoals" readonly>
-                        </div>
-                        <div class="form-group">
-                            <label for="resultAwayTeamGoals">Home team Goals</label>
-                            <input type="number" class="form-control" id="resultAwayTeamGoals" ng-model="bet.match.result.awayTeamGoals" readonly>
-                        </div>
-                        <div class="form-group">
-                            <label for="resultQualifier">File input</label>
-                            <input type="text" class="form-control" id="resultQualifier" ng-model="bet.match.result.qualifier" readonly>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <b>Bet</b>
-                        <div class="form-group">
-                            <label for="betHomeTeamGoals">Home team Goals</label>
-                            <input type="number" class="form-control" id="betHomeTeamGoals">
-                        </div>
-                        <div class="form-group">
-                            <label for="betAwayTeamGoals">Home team Goals</label>
-                            <input type="number" class="form-control" id="betAwayTeamGoals">
-                        </div>
-                        <div class="form-group">
-                            <label for="betQualifier">File input</label>
-                            <input type="text" class="form-control" id="betQualifier" >
-                        </div>
-                    </div>
-                </div>
+                <table class="table table-bordered table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>Result</th>
+                        <th>Bet</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <div class="form-group">
+                                <label for="resultHomeTeamGoals">Home team Goals</label>
+                                <input type="number" class="form-control" id="resultHomeTeamGoals"
+                                       ng-model="bet.match.result.homeTeamGoals" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="resultAwayTeamGoals">Home team Goals</label>
+                                <input type="number" class="form-control" id="resultAwayTeamGoals"
+                                       ng-model="bet.match.result.awayTeamGoals" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="resultQualifier">Qualifier</label>
+                                <input type="text" class="form-control" id="resultQualifier"
+                                       ng-model="bet.match.result.qualifier" readonly>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                <label for="betHomeTeamGoals">Home team Goals</label>
+                                <input type="number" class="form-control" id="betHomeTeamGoals">
+                            </div>
+                            <div class="form-group">
+                                <label for="betAwayTeamGoals">Home team Goals</label>
+                                <input type="number" class="form-control" id="betAwayTeamGoals">
+                            </div>
+                            <div class="form-group">
+                                <label for="betQualifier">Qualifier</label>
+                                <input type="text" class="form-control" id="betQualifier">
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-
         </div>
-
-        <!--
-        <table class="table table-condensed">
-            <tbody>
-            <tr ng-repeat="bet in bets"  data-toggle="collapse" data-target="#bet-{{bet.id}}-data">
-                <td>
-                    <div><b>{{bet.id}}</b></div>
-                </td>
-                <td>
-                    <div>{{bet.description}}</div>
-                </td>
-                <td>
-                    <div>{{bet.lockTime | date : 'MMM d, h:mm:ss a'}}</div>
-                </td>
-            </tr>
-            <tr ng-repeat-end>
-                <td colspan="3">
-                    <div id="bet-{{bet.id}}-data" class="collapse">
-                        bet type: {{bet.type}}
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-            -->
     </div>
 
 </section>
