--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -59,6 +59,7 @@
     <script src="app/directives/permission.directive.js"></script>
     <script src="app/directives/matches.directive.js"></script>
     <script src="app/directives/team.directive.js"></script>
+    <script src="app/directives/brackets.team.directive.js"></script>
 
 </body>
 </html>
