back to top button

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,6 +29,8 @@
         <div class="container" ui-view="content"></div>
     </div>
 
+    <back-to-top/>
+
     <!-- framework -->
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/angular.min.js" type="text/javascript"></script>
@@ -60,6 +62,7 @@
     <script src="app/directives/matches.directive.js"></script>
     <script src="app/directives/team.directive.js"></script>
     <script src="app/directives/brackets.team.directive.js"></script>
+    <script src="app/directives/back-to-top.directive.js"></script>
 
 </body>
 </html>
