rearrange navbar added application ready event and execute on match finish improve api data improve admin page

--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -13,9 +13,17 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
+                <li ui-sref-active="active"><a ui-sref="rules">Rules</a></li>
                 <li ui-sref-active="active"><a ui-sref="teams">Teams</a></li>
+                <li ui-sref-active="active"><a ui-sref="groups">Groups</a></li>
                 <li ui-sref-active="active"><a ui-sref="games">Matches</a></li>
+
+                <li><a href="#/">Contact</a></li>
+            </ul>
+
+
+
+            <ul class="nav navbar-nav navbar-right" >
                 <li class="dropdown" ui-sref-active="active">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         Bets <span class="caret"></span>
@@ -26,16 +34,8 @@
                         <li><a href="#/bets/statistics">Statistics</a></li>
                     </ul>
                 </li>
-                <li><a href="#/">Rules</a></li>
-                <li><a href="#/">Contact</a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right" data-ng-hide="Account.authenticate">
-                <li ui-sref-active="active"><a ui-sref="join">Join</a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right" data-ng-show="Account.authenticate">
-                <li class="dropdown">
+                <li ui-sref-active="active" data-ng-hide="Account.authenticate"><a ui-sref="join">Join</a></li>
+                <li class="dropdown" data-ng-show="Account.authenticate">
                     <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <img ng-src="{{Account.imageUrl}}" style="max-height: 30px;"/> <span class="caret"></span>
                     </a>
