--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,7 @@
     <script src="app.js"></script>
     <!-- controllers -->
     <script src="app/navbar/navbar.controller.js"></script>
-    <script src="app/home/home.controller.js"></script>
+    <script src="app/groups/groups.controller.js"></script>
     <script src="app/teams/teams.controller.js"></script>
     <script src="app/games/games.controller.js"></script>
     <script src="app/bets/bets.controller.js"></script>
