--- a/src/main/resources/static/app/admin/admin.view.html
+++ b/src/main/resources/static/app/admin/admin.view.html
@@ -1,45 +1,59 @@
 <section id="admin" permission="['ROLE_ADMIN']">
-    <h1>Update match result
+    <h1>Match update panel
         <small>Admin Only!</small>
     </h1>
 
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
+        <div class="panel-heading">Select game panel</div>
         <div class="panel-body">
             <form class="form-horizontal" action="">
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="mactList">Match Id:</label>
+                    <label class="control-label col-sm-2" for="firstStageMatchesList">First Stage Matches:</label>
                     <div class="col-sm-10">
-                        <select id="mactList"
+                        <select id="firstStageMatchesList"
                                 class="form-control"
-                                ng-options="match as match.label for match in matches track by match.matchId"
+                                ng-options="match as match.label for match in firstStage track by match.matchId"
                                 ng-model="match"
-                                ng-change="onMatchSelected()"></select>
+                                ng-change="onMatchSelected('first')"></select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-2">Qualifiers:</label>
+                    <div class="col-sm-10">
+                        <div ng-repeat="(key, value) in qualifiers">
+                            <strong>{{key}}</strong>
+                            <div ng-repeat="qualifier in value"><team data="qualifier.team"/> ({{qualifier.knockoutTeamCode}})</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="secondStageMatchesList">Second Stage Matches:</label>
+                    <div class="col-sm-10">
+                        <select id="secondStageMatchesList"
+                                class="form-control"
+                                ng-options="match as match.label for match in secondStage | filter:{ready:true} track by match.matchId"
+                                ng-model="match"
+                                ng-change="onMatchSelected('second')"></select>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 
-    <div class="panel panel-default" ng-if="match">
+
+    <div class="panel panel-primary" ng-if="match">
         <div class="panel-heading">Result Form</div>
         <div class="panel-body">
 
             <form class="form-horizontal" data-ng-submit="postResult()" >
-                <div class="form-group">
+                <div class="form-group" ng-hide="true">
                     <label class="control-label col-sm-2" for="machtId">Match Id:</label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" id="machtId" readonly ng-model="matchResult.matchId">
+                        <p class="form-control-static" id="machtId" ng-model="matchResult.matchId"></p>
                     </div>
                 </div>
-
-                <!--
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="machtLabel">Match label:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="machtLabel" readonly ng-model="match.label">
-                    </div>
-                </div>
-                -->
 
                 <div class="form-group">
                     <label class="control-label col-sm-2">Match:</label>
@@ -53,6 +67,14 @@
                                     {{match.homeTeam.name | capitalize }}
                                 </h2>
                             </td>
+
+                            <td class="col-md-4">
+                                <h2>
+                                    <img class="flag" data-ng-src="/images/teams/{{match.awayTeam.confederation | spaceToUnderscore}}/{{match.awayTeam.code}}.png"/>
+                                    {{match.awayTeam.name | capitalize }}
+                                </h2>
+                            </td>
+
                             <td class="col-md-1 text-center">
                                 <input type="number"
                                        class="form-control"
@@ -70,12 +92,6 @@
                                        ng-model="matchResult.awayTeamGoals"
                                        size="3">
                             </td>
-                            <td class="col-md-4">
-                                <h2>
-                                    <img class="flag" data-ng-src="/images/teams/{{match.awayTeam.confederation | spaceToUnderscore}}/{{match.awayTeam.code}}.png"/>
-                                    {{match.awayTeam.name | capitalize }}
-                                </h2>
-                            </td>
                         </tr>
                         </tbody>
                         </table>
@@ -83,22 +99,14 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
-                    <div class="col-sm-10">
-                        <select id="machtQualifier" class="form-control" ng-model="match.qualifier" ng-options="x for x in ['HOME_TEAM','AWAY_TEAM']"></select>
-                    </div>
-                </div>
-
-                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Submit</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
             </form>
 
         </div>
     </div>
-
 
 </section>
 
