--- a/src/main/resources/static/app/admin/admin.view.html
+++ b/src/main/resources/static/app/admin/admin.view.html
@@ -12,8 +12,8 @@
                     <div class="col-sm-10">
                         <select id="firstStageMatchesList"
                                 class="form-control"
-                                ng-options="match as match.label for match in firstStage track by match.matchId"
-                                ng-model="match"
+                                ng-options="match as match.label for match in matchesData.firstStage track by match.matchId"
+                                ng-model="selectedMatch"
                                 ng-change="onMatchSelected('first')"></select>
                     </div>
                 </div>
@@ -21,9 +21,9 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2">Qualifiers:</label>
                     <div class="col-sm-10">
-                        <div ng-repeat="(key, value) in qualifiers">
+                        <div ng-repeat="(key, value) in matchesData.qualifiers">
                             <strong>{{key}}</strong>
-                            <div ng-repeat="qualifier in value"><team data="qualifier.team"/> ({{qualifier.knockoutTeamCode}})</div>
+                            <div ng-repeat="qualifier in value"><team data="qualifier.team"></team> ({{qualifier.knockoutTeamCode}})</div>
                         </div>
                     </div>
                 </div>
@@ -33,8 +33,8 @@
                     <div class="col-sm-10">
                         <select id="secondStageMatchesList"
                                 class="form-control"
-                                ng-options="match as match.label for match in secondStage | filter:{ready:true} track by match.matchId"
-                                ng-model="match"
+                                ng-options="match as match.label for match in matchesData.secondStage | filter:{ready:true} track by match.matchId"
+                                ng-model="selectedMatch"
                                 ng-change="onMatchSelected('second')"></select>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
     </div>
 
 
-    <div class="panel panel-primary" ng-if="match">
+    <div class="panel panel-primary" ng-if="selectedMatch">
         <div class="panel-heading">Result Form</div>
         <div class="panel-body">
 
@@ -61,20 +61,8 @@
                         <table class="table table-condensed">
                         <tbody>
                         <tr>
-                            <td class="col-md-4">
-                                <h2>
-                                    <img class="flag" data-ng-src="/images/teams/{{match.homeTeam.confederation | spaceToUnderscore}}/{{match.homeTeam.code}}.png"/>
-                                    {{match.homeTeam.name | capitalize }}
-                                </h2>
-                            </td>
-
-                            <td class="col-md-4">
-                                <h2>
-                                    <img class="flag" data-ng-src="/images/teams/{{match.awayTeam.confederation | spaceToUnderscore}}/{{match.awayTeam.code}}.png"/>
-                                    {{match.awayTeam.name | capitalize }}
-                                </h2>
-                            </td>
-
+                            <td class="col-md-4"><team data="selectedMatch.homeTeam"></team></td>
+                            <td class="col-md-4"><team data="selectedMatch.awayTeam"></team></td>
                             <td class="col-md-1 text-center">
                                 <input type="number"
                                        class="form-control"
@@ -95,6 +83,13 @@
                         </tr>
                         </tbody>
                         </table>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
+                    <div class="col-sm-10">
+                        <select id="machtQualifier" class="form-control" ng-model="matchResult.qualifier" ng-options="x for x in ['HOME_TEAM','AWAY_TEAM']"></select>
                     </div>
                 </div>
 
