--- a/src/main/resources/static/app/navbar/navbar.view.html
+++ b/src/main/resources/static/app/navbar/navbar.view.html
@@ -17,6 +17,7 @@
                 <li ui-sref-active="active"><a ui-sref="teams">Teams</a></li>
                 <li ui-sref-active="active"><a ui-sref="groups">Groups</a></li>
                 <li ui-sref-active="active"><a ui-sref="games">Matches</a></li>
+                <li ui-sref-active="active"><a ui-sref="ranking">User Ranking</a></li>
 
                 <li><a href="#/">Contact</a></li>
             </ul>
